Moved code around so that it makes more sense.  Made run box pop in/out on Firefox, still need to fix it for Safari.  Also added play button.  Added UIEffects prototype functions to get rid of clutter in index.html.

--- a/interactive_samples/css/styles.css
+++ b/interactive_samples/css/styles.css
@@ -417,7 +417,7 @@ span.categoryClosed div, span.categoryClosed ul {
 #dragsafe {
   position: absolute;
   top: 0px;
-  left: 0px;
+  left: -600px;
   width: 600px;
   height: 600px;
   z-index: 9999;
